examples/datalog/12_errors/62_wrong_type_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_wrong_agg
Knowledge graph 'test_wrong_agg' created.
Switched to knowledge graph: test_wrong_agg
> .kg use test_wrong_agg
Switched to knowledge graph: test_wrong_agg
> +strings[("hello",), ("world",)].
Inserted 2 fact(s) into 'strings'.
> sum_str(<SUM:S>) :- strings(S).
Script error: Parse error: Unknown aggregate function: 
